--- a/Versionamento/index.html.html
+++ b/Versionamento/index.html.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="col-md-4">
 				 
-				<button type="button" class="btn btn-success" onclick="versionamento()">
+				<button type="button" class="btn btn-success" onclick= "versionamento()">
 					Versionamento
 				</button>
 			</div>
@@ -46,8 +46,8 @@
 function logica(){
 	window.location.href="https://github.com/elatchuc/curso-back-end/tree/main/Logica%20de%20programa%C3%A7%C3%A3o"
 }
-function Versionamento(){
-	window.location.href="https://github.com/elatchuc/curso-back-end/tree/main/Versionametno"
+function versionamento(){
+	window.location.href="https://github.com/elatchuc/curso-back-end/tree/main/Versionamento"
 }
 function mAgeis(){
 	window.location.href="https://github.com/elatchuc/curso-back-end/tree/main/Metodologias%20Ageis"
